collect model output

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 *.fasta
+*.pyc
+cache*
+dna_cache*
+DNABERT/examples/runs
+DNABERT/examples/ft
+DNABERT/examples/output*
+DNABERT/examples/ft_new
+DNABERT/examples/results
+DNABERT/examples/data_old
+DNABERT/examples/data
+DNABERT/examples/result
+DNABERT/examples/models
+DNABERT/src/transformers/data/__pycache__
+DNABERT/src/transformers/data/metrics/__pycache__
+DNABERT/src/transformers/data/processors/__pycache__
+DNABERT/src/transformers/__pycache__
+DNABERT/src/transformers.egg-info
